--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,14 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+   <!--Boostrap -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMVVvI-x-yFBSGks_1KK6kqCqsFaj2XlY"></script>
 </body>
 </html>
